--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,8 @@ anyio==4.6.2.post1
     #   httpx
     #   starlette
     #   watchfiles
+asgi-correlation-id==4.3.4
+    # via formwise (pyproject.toml)
 beanie==1.27.0
     # via formwise (pyproject.toml)
 certifi==2024.8.30
@@ -55,19 +57,26 @@ mdurl==0.1.2
     # via markdown-it-py
 motor==3.6.0
     # via beanie
+packaging==24.1
+    # via asgi-correlation-id
 pydantic==2.9.2
     # via
     #   beanie
     #   fastapi
     #   lazy-model
+    #   pydantic-settings
 pydantic-core==2.23.4
     # via pydantic
+pydantic-settings==2.6.0
+    # via formwise (pyproject.toml)
 pygments==2.18.0
     # via rich
 pymongo==4.9.2
     # via motor
 python-dotenv==1.0.1
-    # via uvicorn
+    # via
+    #   pydantic-settings
+    #   uvicorn
 python-multipart==0.0.12
     # via fastapi
 pyyaml==6.0.2
@@ -81,7 +90,9 @@ sniffio==1.3.1
     #   anyio
     #   httpx
 starlette==0.41.0
-    # via fastapi
+    # via
+    #   asgi-correlation-id
+    #   fastapi
 toml==0.10.2
     # via beanie
 typer==0.12.5
