--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,8 +17,9 @@ dependencies = [
 dev-dependencies = [
     "pre-commit>=4.0.1",
     "pytest>=8.3.3",
-    "pytest-asyncio>=0.24.0",
     "ruff>=0.7.1",
+    "faker>=30.8.1",
+    "pytest-cov>=5.0.0",
 ]
 
 [tool.ruff.lint]
@@ -34,3 +35,9 @@ select = [
 
 [tool.ruff.format]
 docstring-code-format = true
+
+[tool.pytest.ini_options]
+addopts = "--cov=src --cov-report=html"
+filterwarnings = [
+    "ignore::DeprecationWarning",
+]
