--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,8 @@ dev-dependencies = [
     "ruff>=0.7.1",
     "faker>=30.8.1",
     "pytest-cov>=5.0.0",
+    "pytest-xdist>=3.6.1",
+    "pytest-sugar>=1.0.0",
 ]
 
 [tool.ruff.lint]
@@ -37,7 +39,7 @@ select = [
 docstring-code-format = true
 
 [tool.pytest.ini_options]
-addopts = "--cov=src --cov-report=html"
+addopts = "-n 4 --cov=src --cov-report=html"
 filterwarnings = [
     "ignore::DeprecationWarning",
 ]
