--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "asgi-correlation-id>=4.3.4",
     "beanie[srv]>=1.27.0",
+    "fastapi-sso>=0.17.0",
     "fastapi[standard]>=0.115.3",
     "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.6.0",
