--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -35,7 +35,7 @@ jobs:
     name: Quality Checks
     runs-on: ubuntu-latest
     needs: changes
-    if: ${{ needs.changes.outputs.backend == "true" }}
+    if: ${{ needs.changes.outputs.backend == true }}
 
     defaults:
       run:
