--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -59,7 +59,7 @@ jobs:
         run: uv sync --all-extras --dev
 
       - name: Run Ruff
-        run: uv ruff check --output-format=github .
+        run: uv run ruff check --output-format=github .
 
       - name: Run tests
         env:
