--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "beanie[srv]>=1.27.0",
     "fastapi-sso>=0.17.0",
     "fastapi[standard]>=0.115.3",
+    "langchain>=0.3.9",
+    "langchain-community>=0.3.8",
+    "langchain-groq>=0.2.1",
     "logfire[fastapi,pymongo]>=2.1.2",
     "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.6.0",
