--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,7 +21,7 @@ GOOGLE_CLIENT_SECRET=your_google_oauth_client_secret
 # Obtain an API key from https://console.groq.com/keys
 GROQ_API_KEY=your_groq_api_key
 
-# *** LangChain Tracing (Optional) ***
+# *** LangChain Tracing ***
 # Sign up at https://smith.langchain.com
 LANGCHAIN_API_KEY=your_langchain_api_key
 LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
